# AutopackingAndroid

./: CMakeLists.txt  CurrentVersion  Install.txt  ReadMe.txt
CmakeExtras/: CustomPCH.cmake
Document/: ApkFactory图解.psd  AutopackingAndroid图解.psd  UserManualv1.0.chm  UserManualv1.0.docx  UserManualv1.1.docx  apk_factory_logv1.psd  apk_factory_logv2.psd  apk_factory_logv3.psd
Src/ApkFactory/: CMakeLists.txt
Src/ApkFactory/Adapter/: TableContralAdapterAppPak.cpp  TableContralAdapterAppPak.h  TableContralAdapterPak.cpp  TableContralAdapterRes.cpp  TableContralAdapterStr.cpp  TableContralAdapterStr.h
Src/ApkFactory/Dialogs/: DePack.cpp  DecPackSetting.cpp  DecPackSetting.h  Donate.h  EditTable.cpp  ExportData.cpp  ExportData.h  ImportData.cpp  LogDialog.h  SetJdkPath.cpp  SetKey.cpp  SourcePackSetting.cpp
Src/ApkFactory/Main/: main.cpp
Src/ApkFactory/MainUi/: About.ui  DePack.ui  Donate.ui  EditTable.ui  SetKey.ui  SetVersionDialog.ui  SourcePackSetting.ui  mainwindow.ui
Src/ApkFactory/MainWindow/: BjCentralFram.cpp  BjStatusBar.cpp  BjTableView.cpp  BjToolBar.cpp  mainwindow.cpp  mainwindow.h
Src/ApkFactory/Model/: BjEditDelegate.cpp  BjEditDelegate.h  BjTableDelegate.h  BjTableModel.h  DatabaseManager.h  PathManager.cpp  PathManager.h
Src/ApkFactory/PCRE/: PCRECache.h  SPCRE.cpp
Src/ApkFactory/Resource/About/: About.qrc
Src/ApkFactory/Resource/Css/: widgetstylesheet.qrc
Src/ApkFactory/Resource/Windows/: version.rc.in
Src/ApkFactory/Table/: ReplacePakTable.cpp  ReplaceResTable.h  ReplaceStrTable.cpp  ReplaceStrTable.h
Src/ApkFactory/Works/: DecPack.cpp  Pack.cpp  Pack.h  SrcPack.cpp  SrcPack.h  UnPackApk.h
Src/AutoPacking/: CMakeLists.txt
Src/AutoPacking/Adapter/: TableContralAdapter.cpp  TableContralAdapter.h  TableContralAdapterPak.h  TableContralAdapterRes.h
Src/AutoPacking/Custom/: ZySingleBook.cpp  ZySingleBook.h
Src/AutoPacking/Dialogs/: About.cpp  About.h  BjMessageBox.cpp  BjMessageBox.h  DePack.cpp  DePack.h  DecPackSetting.cpp  Donate.cpp  EditTable.cpp  EditTable.h  ExportData.cpp  ImportData.cpp  ImportData.h  ImportZySingle.cpp  ImportZySingle.h  LogDialog.cpp  SetJdkPath.h  SetKey.cpp  SetKey.h  SetVersionDialog.cpp  SetVersionDialog.h  SourcePackSetting.cpp  SourcePackSetting.h  ThreadConfigDialog.cpp  ThreadConfigDialog.h  ZySingleSetting.cpp  ZySingleSetting.h
Src/AutoPacking/Interface/: ITableContral.h
Src/AutoPacking/Main/: main.cpp
Src/AutoPacking/MainUi/: About.ui  DePack.ui  DecPackSetting.ui  Donate.ui  ExportData.ui  ImportData.ui  ImportZySingle.ui  LogDialog.ui  SetJdkPath.ui  SetKey.ui  SourcePackSetting.ui  ThreadConfigDialog.ui  ZySingleSetting.ui  mainwindow.ui
Src/AutoPacking/MainWindow/: BjCentralFram.cpp  BjCentralFram.h  BjStatusBar.h  BjTableView.cpp  BjTableView.h  BjToolBar.cpp  BjToolBar.h  mainwindow.cpp  mainwindow.h
Src/AutoPacking/Model/: BjIdDelegate.cpp  BjIdDelegate.h  BjTableDelegate.cpp  BjTableModel.cpp  DatabaseManager.cpp  DatabaseManager.h  PathManager.cpp  PathManager.h  Tools.cpp  Tools.h
Src/AutoPacking/Network/: DownLoad.cpp  DownLoad.h
Src/AutoPacking/PCRE/: PCREReplaceTextBuilder.cpp  PCREReplaceTextBuilder.h  SPCRE.h
Src/AutoPacking/Parsers/: XlsxParser.cpp  XlsxParser.h
Src/AutoPacking/Resource/Donate/: Donate.qrc
Src/AutoPacking/Resource/Icon/: main.qrc
Src/AutoPacking/Resource/Windows/: version.rc.in
Src/AutoPacking/Table/: ReplaceAppPakTable.cpp  ReplaceAppPakTable.h  ReplacePakTable.h  ReplaceResTable.cpp
Src/AutoPacking/Works/: DecPack.cpp  DecPack.h  Pack.cpp  Pack.h  SrcPack.cpp  SrcPack.h  UnPackApk.cpp
Src/pcre/: config-cmake.h.in  pcre_compile.c  pcre_config.c
Src/xlsx/: CMakeLists.txt  xlsxzipreader.cpp  xlsxzipwriter.cpp
installer/: ApkFactory.iss  AutopackingAndroid.iss  ChineseSimplified.isl  vcredist_x86版本.txt  win_installer_note.txt
installer/Resource/Css/: widgetstylesheet.css
installer/Resource/Documents/: UserManual.chm
installer/Resource/Tools/: apktool.bat  prepack.bat  srcpack.bat
